<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_backup_database"
        android:orderInCategory="100"
        android:title="@string/action_backup_database"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_import_database"
        android:orderInCategory="100"
        android:title="@string/action_import_database"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_reset_database"
        android:orderInCategory="100"
        android:title="@string/action_reset_database"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu>
