<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="@dimen/fragment_min_width"
    android:padding="@dimen/padding_normal">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_course_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_course_name"
            android:textSize="@dimen/text_normal" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_normal"
        android:theme="@style/AppTheme">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_course_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_course_nickname"
            android:textSize="@dimen/text_normal" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_add_course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/add_course"
        android:textSize="@dimen/text_small"
        android:theme="@style/AppTheme"/>

</LinearLayout>